--- a/fig/tikz/min_loes.tex
+++ b/fig/tikz/min_loes.tex
@@ -39,5 +39,5 @@
 \label{fig:min_loes}
 \end{figure}
 \noindent
-Løsningsmængden er det skraverede område på figur \ref{fig:min_loes}. For at finde den optimale løsning findes enhver given skalar $k$ og overvejer løsningsmængden med alle punkter, hvor objektfunktionen $\textbf{c}^T\textbf{x}$ er lig med $k$. Dette illustreres ved den linje, der er beskrevet af ligningen $-x_l-x_2=k$. Bemærk, at denne linje er vinkelret på vektoren $\textbf{v}$ med koordinaterne $\textbf{v}=(-1,-1)$.
-Forskellige værdier for $k$ fører til forskellige linjer, hvor  alle linjer er parallelle med hinanden samt vinkelret med vektoren. Hvis man øger værdien af $k$ svarer til at bevæge linjen $z=x_l-x_2$ langs retningen af vektoren $\textbf{v}$. For at finde den optimale løsning er det interessante at minimere k, og dermed bevæge linjen så meget som muligt i retning af $-\textbf{v}$ uden at forlade løsningsmængden. Det mest optimale er derfor $k = -4$ og dette gør, at vektor $\textbf{x}=(2,2)$ er den mest optimale løsning i løsningsmængden. 
+Løsningsmængden er det skraverede område på figur \ref{fig:min_loes}. For at finde den optimale løsning findes enhver given skalar $k$ og løsningsmængden med alle punkter overvejes, hvor objektfunktionen $\textbf{c}^T\textbf{x}$ er lig med $k$. Dette illustreres ved den linje, der er beskrevet af ligningen $-x_l-x_2=k$. Bemærk, at denne linje er vinkelret på vektoren $\textbf{v}$ med koordinaterne $\textbf{v}=(-1,-1)$.
+Forskellige værdier for $k$ fører til forskellige linjer, hvor  alle linjer er parallelle med hinanden samt vinkelret med vektoren. Hvis værdien af $k$ øges, svarer det til at bevæge linjen $z=x_l-x_2$ langs retningen af vektoren $\textbf{v}$. For at finde den optimale løsning er det interessante at minimere $k$, og dermed bevæge linjen så meget som muligt i retning af $-\textbf{v}$ uden at forlade løsningsmængden. Det mest optimale er derfor $k = -4$, hvormed vektor $\textbf{x}=(2,2)$ er den mest optimale løsning i løsningsmængden. 
