--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -2,6 +2,7 @@
 % God arbejdslyst - tak julle :))
 
 I forhold til grafisk at løse lignende lineære programmeringsproblemer forhenstående, så vil følgende eksempel illustrere hvordan. 
+%Mit forslag til ovenstående: Eksempel \ref{eks:min_loes} illustrerer, hvordan lineære programmeringsproblemer løses i nærværende rapport.
 
 \begin{eks}
 \label{eks:min_loes}
@@ -13,11 +14,11 @@ Betragt minimumsproblemet
 \text{begrænset af}	&x_1& + 2x_2			&\leq 	& 6,\\
 					&2x_1& + x_2			&\leq	& 6,\\
 					&x_1&    				&\geq	& 0,\\
-					&x_2&    				&\geq	& 0,\\
+					&x_2&    				&\geq	& 0.\\
 \end{array}
 \end{align*}
 %
-På figur \ref{eks:min_loes} kan løsningsområdet, markeret med gråblå, for minimumsproblemet ses.
+På figur \ref{eks:min_loes} kan løsningsområdet - markeret med gråblå - for minimumsproblemet ses.
 %
 \input{fig/tikz/min_loes}
 \end{eks}
