--- a/incl/main/linear_optimeringsproblemer/standardform.tex
+++ b/incl/main/linear_optimeringsproblemer/standardform.tex
@@ -12,7 +12,7 @@ Hvis et lineært optimeringsproblem er på formen
 \end{align*}
 %
 er optimeringsproblemet på \textit{standardform}.
-Bemærk, at på standardform er problemet et maksimumsproblem, og betingelserne er lighedsbetingelser og ikke-negativsbetingelser.
+Bemærk, at problemet på standardform er et maksimumsproblem, og betingelserne er lighedsbetingelser og ikke-negativsbetingelser.
 \\\\
 %
 For at omskrive et minimumsproblem til et maksimumsproblem multipliceres objektfunktionen med $-1$.
