--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -1,25 +1,13 @@
 \section{Konvekse mængder}
 %
-I forbindelse med mængder af vektorer er det vigtigt at definere \textit{konvekse mængder}.
+I forbindelse med mængder af vektorer er det vigtigt at definere \textbf{konvekse mængder}.
 \begin{defn}{}{konveks}
-<<<<<<< HEAD
-En mængde $S \subset \R^n$ er konveks, hvis $ \lambda \textbf{x} + (1-\lambda )\textbf{y} \in S$ for ethvert $\textbf{x}, \textbf{y} \in S$ og ethvert $ \lambda \in [0,1]$. 
-=======
 En mængde $S \subset \R^n$ er \textbf{konveks}, hvis $\lambda \textbf{x} + (1- \lambda ) \textbf{y} \in S$ for ethvert $\textbf{x}, \textbf{y} \in S$ og ethvert $\lambda \in [0,1]$. 
->>>>>>> bed6d0f15fb865e1928f1eb8c2b30c730cdc1599
 \end{defn}
 \noindent
 %
-<<<<<<< HEAD
 En mængde er med andre ord konveks, hvis ethvert element på en ret linje mellem to vilkårlige punkter $x$ og $y$ i mængden også tilhører mængden. 
 På figur !REF HER! ses eksempler på konvekse og ikke-konvekse mængder. 
-%
-\begin{figure}[H]
-  \centering
-  \begin{tikzpicture}
-    \tikzset{punkt/.style={point, draw=black}}
-=======
-En mængde er med andre ord konveks, hvis ethvert element på en ret linje mellem to vilkårlige punkter $x$ og $y$ i mængden også tilhører mængden. På figur \ref{asdf} ses eksempler på konvekse og ikke-konvekse mængder. 
 %
 \begin{figure}[h!]
   \centering
@@ -55,8 +43,6 @@ En mængde er med andre ord konveks, hvis ethvert element på en ret linje melle
 
 	\draw[-, dashed,black,ultra thick] (6,4) -- (2,4);
 	\draw[-, dashed,black,ultra thick] (-4,2) -- (-4,-2);
->>>>>>> bed6d0f15fb865e1928f1eb8c2b30c730cdc1599
-
   \end{tikzpicture}
   \caption{}
   \label{fig:konveks}
@@ -76,7 +62,7 @@ Lad $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k \in \R^n$, og $\lambda_1, 
 \begin{thm}{}{konveks}
 \begin{enumerate}[label=(\alph*)]
 	\item Skæringspunktet for konvekse mængder er konvekst. 
-	%Det hedder ikke skæringspunktet, det er det mellemliggende, ved ikke hvad det hedder
+	%Hedder det skæringspunktet?? Jeg hidkalder Horia. 
 	\item Enhver polyhedron er en konveks mængde.
 	\item En konveks kombination af et endeligt antal elementer fra en konveks mængde tilhører også den mængde. 
 	\item Det konvekse skrog af et endeligt antal vektorer er en konveks mængde. 
@@ -85,5 +71,16 @@ Lad $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k \in \R^n$, og $\lambda_1, 
 %
 %
 \begin{proof}
-Jaja
+\begin{enumerate}[label=(\alph*)]
+	\item Lad $I$ være en indeksmængde, lad $S_i$, $i \in I$, være et antal konvekse mængder, samt lad $ \lambda \in [0,1]$.
+Antag nu, at vektorerne $\textbf{x}$ og $\textbf{y}$ tilhører fællesmængden $ \bigcap_{i \in I} S_i$. Det haves, at $ \lambda \textbf{x} + (1 - \lambda )\textbf{y} \in S_i$, eftersom enhver $S_i$ er konveks. Derfor er $ \bigcap_{i \in I} S_i$ konveks, da $ \lambda \textbf{x} + (1 - \lambda )\textbf{y} \in  \bigcap_{i \in I} S_i$, hvilket beviser (a). 
+	\item Lad $\textbf{a}$ være en vektor, lad $b$ være en skalar, samt lad $ \lambda \in [0,1]$. 
+Antag, at $\textbf{x}$ og $\textbf{y}$ henholdsvis opfylder, at $\textbf{a}^T \textbf{x} \geq b$ og $\textbf{a}^T \textbf{y} \geq b$, således de tilhører samme halvrum. 
+Så er $\textbf{a}^T (\lambda \textbf{x} + (1 - \lambda) \textbf{y} ) \geq \lambda b + (1 - \lambda ) b = b$, hvilket beviser, at $ \lambda \textbf{x} + (1 - \lambda )\textbf{y}$ tilhører samme halvrum, hvormed halvrummet er konvekst.
+Bemærk, at en polyhedron er fællesmængden af et endeligt antal halvrum, og at (b) dermed er bevist jævnfør (a). 
+	\item Hmmmm
+	\item Lad $S$ være et konvekst skrog af $\textbf{x}_1, \textbf{x}_2, \ldots, \textbf{x}_k$, samt lad $\textbf{y} = \sum_{i=1}^{k} \zeta_i \textbf{x}^i$, $\textbf{z} = \sum_{i=1}^{k} \theta_i \textbf{x}^i$ være to elementer i $S$, hvor $ \zeta_i \geq 0$, $ \theta_i \geq 0$, og $ \sum_{i=1}^{k} \zeta_i = \sum_{i=1}^{k} \theta_i = 1$. 
+	Lad $ \lambda = [0,1]$. Så er $$\lambda \textbf{y} + (1 - \lambda ) \textbf{z} = \lambda \sum_{i=1}^k \zeta_i \textbf{x}^i + (1 - \lambda) \sum_{i=1}^k \theta_i \textbf{x}^i = \sum_{i=1}^k (\lambda \zeta_i + (1-\lambda )\theta_i ) \textbf{x}^i.$$
+Bemærk, at koefficienterne $ \lambda \zeta_i + (1 - \lambda) \theta_i$, $i = 1, \ldots, k$, summerer til $1$ og ikke er negative. Dermed er $ \lambda \textbf{y} + (1 - \lambda ) \textbf{z}$ en konveks kombination af vektorerne $\textbf{x}^1, \ldots, \textbf{x}^k$, og tilhører derfor mængden $S$, hvormed (d) er bevist. 
+\end{enumerate}
 \end{proof}
