Update konveks.tex, Konvekse_maengder.tex, and 3 more files...

--- a/incl/main/grafisk_losning/ekstrema_punkter.tex
+++ b/incl/main/grafisk_losning/ekstrema_punkter.tex
@@ -1,5 +1,6 @@
-%vis at løsningerne findes i hjørnene af en polytop.
-\\
+\section{Ekstremer, hjørnepunkter og basale løsninger}
+%
+\textit{vis at løsningerne findes i hjørnene af en polytop.}
 Som det fremgår i ovenstående, vil en optimal løsning være i hjørnerne af en polyede.
 Der er derfor behov for måder at definere disse hjørner på.
 %
