--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -69,24 +69,28 @@ Så eksisterer der en invertibel $m \times m$ matrix $P=E_kE_{k-1} \cdots E_1$, 
 \end{thm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% HER
 \begin{proof}
-Lad $A$ være en $m \times n$ matrix og $P=E_kE_{k-1} \cdots E_1$ være en $m \times m$ matrix. 
-$P$ er dermed et produkt af elementære matricer, hvormed $P$ er invertibel. 
-Jævnfør definition \ref{defn:mxmulti} haves, at 
-$$
-PA=
-\begin{bmatrix}
-P\textbf{a}_1 & P\textbf{a}_2 & \ldots P\textbf{a}_m
-\end{bmatrix}. 
-$$
-Antag, at række $5$ i $A$ skal multipliceres med en skalar $c$. 
-Lad $p_{5,5}=c$, og resten af indgangene i $\textbf{p}_5$ være $0$. 
-Dermed haves, at række $5$ i $PA$ er 
-$$
-\begin{bmatrix}
-c
-\end{bmatrix}
-$$
-........... %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% hjælp
+%Lad $A$ være en $m \times n$ matrix og $P=E_kE_{k-1} \cdots E_1$ være en $m \times m$ matrix. 
+%$P$ er dermed et produkt af elementære matricer, hvormed $P$ er invertibel. 
+%Jævnfør definition \ref{defn:mxmulti} haves, at 
+%$$
+%PA=
+%\begin{bmatrix}
+%P\textbf{a}_1 & P\textbf{a}_2 & \ldots P\textbf{a}_m
+%\end{bmatrix}. 
+%$$
+%Antag, at række $5$ i $A$ skal multipliceres med en skalar $c$. 
+%Lad $p_{5,5}=c$, og resten af indgangene i $\textbf{p}_5$ være $0$. 
+%Dermed haves, at række $5$ i $PA$ er 
+%$$
+%\begin{bmatrix}
+%c
+%\end{bmatrix}
+%$$
+Lad $A$ være en $m \times n$ matrix og $P$ være et $m \times m$ produkt af de elementære matricer som skal til for at omdanne en matrix til reduceret rækkeform, $E_kE_{k-1} \cdots E_1$. 
+$P$ er dermed invertibel da enhver elemenetær matrix er invertibel og produktet af to invertible matricer også er invertibel. 
+Det vides at gauss elimination omdanner en matrix til reduceret trappeform, ved hjælp af elementære rækkeoperationer, så for hver af de operationer, findes der en tilsvarende elementær matrice.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% hjælp
 \end{proof}
 %
 \\
