Update konveks.tex and Konvekse_maengder.tex

--- a/fig/tikz/geometri/konveks.tex
+++ b/fig/tikz/geometri/konveks.tex
@@ -41,21 +41,20 @@
 %
 % Punkter og linje 
 % -------------------------------------------------------
+% Blå figur
 \draw[thick,-] (0.8,0.8,1.2) -- (1.1,0.8,1.2);
 %
 \filldraw[black] (0.8,0.8,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
 \filldraw[black] (1.1,0.8,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
-% a_1
-%\draw[thick,->](0.7,0.95,1.2)--(0.8,0.95,1.2) node[right]{$a_1$};
 %
-% a_3
-%\draw[thick,->](1.2,0.95,1.2)--(1.1,0.95,1.2) node[left]{$a_3$};
+% Rød figur 
+\draw[thick,-] (1.6,0.8,1.2) -- (1.9,0.8,1.2);
 %
+\filldraw[black] (1.6,0.8,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
+\filldraw[black] (1.9,0.8,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
 %
-%
-%\draw[black] (0.91,0.96,1.2) circle (0pt) node[anchor=west] {$\mathcal{P}$};
 %
 \end{tikzpicture}
   \captionof{figure}{En konveks mængde markeret med blå og en ikke-konveks mængde markeret med rød.}
-  \label{fig:nej2}
+  \label{fig:neej}
 \end{center}
