--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -1,65 +1,31 @@
 \section{Konvekse mængder}
 %
-I forbindelse med mængder af vektorer er det vigtigt at definere \textbf{konvekse mængder}.
+I forbindelse med mængder af vektorer er det vigtigt at definere \textit{konvekse mængder}.
+%
 \begin{defn}{}{konveks}
 En mængde $S \subset \R^n$ er \textbf{konveks}, hvis $\lambda \textbf{x} + (1- \lambda ) \textbf{y} \in S$ for ethvert $\textbf{x}, \textbf{y} \in S$ og ethvert $\lambda \in [0,1]$. 
 \end{defn}
 \noindent
 %
 En mængde er med andre ord konveks, hvis ethvert element på en ret linje mellem to vilkårlige punkter $x$ og $y$ i mængden også tilhører mængden. 
-På figur !REF HER! ses eksempler på konvekse og ikke-konvekse mængder. 
+På figur \ref{fig:neej} ses eksempler på en konveks mængde, markeret med blå og ikke-konveks mængde markeret med rød. 
 %
 \input{fig/tikz/geometri/konveks}
 %
+\begin{defn}{}{konvekskombihylster}
+Lad $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k \in \R^n$, og $\lambda_1, \lambda_2, \ldots, \lambda_k$ være ikke-negative skalarer, hvis sum er $1$. Da gælder:
 %
-%\begin{figure}[h!]
-%  \centering
-%  \begin{tikzpicture}
-%    \tikzset{punkt/.style={point, draw=black}} 
-%%   
-%% Punkter
-%% -------------------------------------------------
-%	\node at (4,4)	(1){};
-%	\node at (-4,4)	(4){};
-%	\node at (4,-4)	(2){};
-%	\node at (-4,-4) (3){};
-%	\node at (-4,-4) (3){};
-%	\node at (-4,-4) (3){};
-%% 
-%% 
-%	\filldraw[black, fill=blue!5] (2) rectangle (4);
-%	\node at (0,0) (P){$P$};
-%	
-%	\filldraw [black] (2,4) circle (2pt);
-%	\filldraw [black] (4,4) circle (2pt);
-%	\filldraw [black] (6,4) circle (2pt);
-%	\filldraw [black] (-4,2) circle (2pt);
-%	\filldraw [black] (-4,0) circle (2pt);
-%	\filldraw [black] (-4,-2) circle (2pt);	
-%	\node at (2,4.25)	 (y){$\textbf{y}$};
-%	\node at (4,4.25)	 (x){$\textbf{x}$};
-%	\node at (6,4.25)	 (z){$\textbf{z}$};
-%	\node at (-3.75,2)  (v){$\textbf{v}$};
-%	\node at (-3.75,0)	 (w){$\textbf{w}$};
-%	\node at (-3.75,-2) (u){$\textbf{u}$};
-%
-%
-%	\draw[-, dashed,black,ultra thick] (6,4) -- (2,4);
-%	\draw[-, dashed,black,ultra thick] (-4,2) -- (-4,-2);
-%  \end{tikzpicture}
-%  \caption{}
-%  \label{fig:konveks}
-%\end{figure}
-%
-\begin{defn}{}{konvekskombiskrog}
-Lad $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k \in \R^n$, og $\lambda_1, \lambda_2, \ldots, \lambda_k$ være ikke-negative skalarer, hvis sum er $1$. 
 \begin{enumerate}[label=(\alph*)]
 	\item Vektoren $$\sum_{i=1}^{k} \lambda_i \textbf{x}^i$$ kaldes en \textbf{konveks kombination} af vektorerne $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k$. 
-	\item Det \textbf{konvekse skrog} af vektorerne $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k$ er mængden af alle konvekse kombinationer af disse vektorer. 
-%Det hedder vel ikke konvekse skrog, hvad kalder vi det? HORIA HJÆLP JENS
+	\item Det \textbf{konvekse hylster} af vektorerne $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k$ er mængden af alle konvekse kombinationer af disse vektorer. 
 \end{enumerate}
+%
+%Det hedder vel ikke konvekse skrog, hvad kalder vi det? HORIA HJÆLP JENS
+%
 \end{defn}
 %
+Eksempel 
+Af definition \ref{defn:konvekskombihylster} følger sætning \ref{thm:konveks}.
 %Evt. noget metatekst
 %
 \begin{thm}{}{konveks}
