Update konveks.tex, konveks_eks.tex, and Konvekse_maengder.tex

--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -25,8 +25,10 @@ Lad $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k \in \R^n$, og $\lambda_1, 
 \end{defn}
 %
 Eksempel 
+%
+\input{fig/tikz/geometri/konveks_eks}
+%
 Af definition \ref{defn:konvekskombihylster} følger sætning \ref{thm:konveks}.
-%Evt. noget metatekst
 %
 \begin{thm}{}{konveks}
 \begin{enumerate}[label=(\alph*)]
