--- a/fig/tikz/geometri/konveks_eks.tex
+++ b/fig/tikz/geometri/konveks_eks.tex
@@ -24,34 +24,27 @@
 % Favning
 % -------------------------------------------------------
 %
-% Konveks mængde farvning
-\filldraw[fill=myblue,opacity=0.3, thick](c)--(d)--(g)--(h)--(c);
-  \draw[thick](d)--(g);
-  \draw[thick](d)--(c);
-  \draw[thick](g)--(h);
-  \draw[thick](h)--(c);
-%
 % Ikke-konveks mængde farvning
 \filldraw[fill=myred,opacity=0.3, thick](a)--(b)--(e)--(m)--(f)--(a);
-  \draw[thick](a)--(b);
-  \draw[thick](b)--(e);
-  \draw[thick](e)--(m);
-  \draw[thick](m)--(f);
-  \draw[thick](f)--(a);
+  \draw[thick,->](f)--(b);
+  \draw[thick,->](f)--(c);
+  \draw[thick,->](f)--(1.35,1.2,1.2);
+  \draw[thick,->](b)--(c);
+  
 %
 % Punkter og linje 
 % -------------------------------------------------------
 % Blå figur
-\draw[thick,-] (0.8,0.85,1.2) -- (1.1,0.85,1.2);
+\draw[thick,-] (0.8,0.8,1.2) -- (1.1,0.8,1.2);
 %
-\filldraw[black] (0.8,0.85,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
-\filldraw[black] (1.1,0.85,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
+\filldraw[black] (0.8,0.8,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
+\filldraw[black] (1.1,0.8,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
 %
 % Rød figur 
-\draw[thick,-] (1.6,0.85,1.2) -- (1.9,0.85,1.2);
+\draw[thick,-] (1.6,0.8,1.2) -- (1.9,0.8,1.2);
 %
-\filldraw[black] (1.6,0.85,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
-\filldraw[black] (1.9,0.85,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
+\filldraw[black] (1.6,0.8,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
+\filldraw[black] (1.9,0.8,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
 %
 %
 \end{tikzpicture}
