--- a/fig/tikz/min_loes.tex
+++ b/fig/tikz/min_loes.tex
@@ -1,40 +1,35 @@
 \begin{figure}[H]
 \centering
 \begin{tikzpicture}
+% 
+%
 \begin{axis}[
-	 axis x line=center,
-  axis y line=center,
-  xtick={-5,-4,...,5},
-  ytick={-5,-4,...,5},
-  xlabel={$x_1$},
-  ylabel={$x_2$},
-  xlabel style={below right},
-  ylabel style={above left},
-  xmin=-1,
-  xmax=4,
-  ymin=-1,
-  ymax=4]
+	axis lines = left,
+	xlabel = $x_1$,
+	ylabel = {$x_2$},
 	legend style={at={(0.45,0.025)},anchor=south west},
 ]
-
-
-
-\addplot[name path=b, domain={0:6}, color=myblue, style=very thick,samples=2]{6-2*x};
-	\addlegendentry{$2x_1+x_2 \leq 6$}
-	\addplot[name path=a, domain={0:6}, color=myred, style=very thick, samples=2]{3-0.5*x};
-	\addlegendentry{$x_1+2x_2 \leq 6$}
+	\addplot[name path=b, domain={0:1}, color=myblue, style=very thick,samples=2]{2*x+10};
+	\addlegendentry{$2x_1-x_2 \leq -10$}
+	\addplot[name path=a, domain={0:13.5}, color=mygreen, style=very thick, samples=2]{x-7};
+	\addlegendentry{$x_1-x_2 \geq 7$}
+	\addplot[domain=0:15,samples=2,color=myred, style=very thick]{-x+20};
+	\addlegendentry{$x_1 + x_2 \leq 20$}
+	\addplot[name path=c, domain={1:8}, color=black, style=very thick,samples=2]{12};
+	\addlegendentry{$x_2 \leq 12$}
 	
-
-	\addplot[domain=0:6,samples=2,color=myred, style=very thick]{((6-2*x};
-	\addplot[domain=0:6,samples=2,color=myblue, style=very thick]{3-0.5*x};
-
+	\tikzfillbetween [of=a and b]{myblue!15}
+	\tikzfillbetween [of=c and a]{myblue!15}
 	
-\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{-x};
-\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
-\addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
-\addplot[mark=*] coordinates {(2,2)};
+	\addplot[domain=0:15,samples=2,color=myred, style=very thick]{-x+20};
+	\addplot[domain=0:5,samples=2,color=myblue, style=very thick]{2*x+10};
+	\addplot[domain=0:15,samples=2,color=mygreen, style=very thick]{x-7};
+	\addplot[domain=0:15,samples=2,color=black, style=very thick]{12};
+	
+	\addplot[domain=0:15, samples=2, color=black, dotted, thick]{0};
+%
 \end{axis}
 \end{tikzpicture}
-\caption{Grafisk løsning til problemet i \ref{eks:min_loes}}
-\label{fig:min_loes}
+\caption{nej}
+\label{fig:min_nej}
 \end{figure}
