--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -20,7 +20,8 @@ Betragt minimumsproblemet
 %
 På figur \ref{eks:min_loes} kan løsningsområdet - markeret med gråblå - for minimumsproblemet ses.
 %
-\input{fig/tikz/min_loes}
+\input{fig/tikz/optimering/min_loes}
+%
 \end{eks}
 \noindent
 Løsningsmængden er det skraverede område på figur \ref{fig:min_loes}. For at finde den optimale løsning findes enhver given skalar $k$ og løsningsmængden med alle punkter overvejes, hvor objektfunktionen $\textbf{c}^T\textbf{x}$ er lig med $k$. Dette illustreres ved den linje, der er beskrevet af ligningen $-x_l-x_2=k$. Bemærk, at denne linje er vinkelret på vektoren $\textbf{v}$ med koordinaterne $\textbf{v}=(-1,-1)$.
