--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -24,6 +24,5 @@ På figur \ref{eks:min_loes} kan løsningsområdet - markeret med gråblå - for
 %
 \end{eks}
 \noindent
-Løsningsmængden er det skraverede område på figur \ref{fig:min_loes}. For at finde den optimale løsning findes enhver given skalar $k$ og løsningsmængden med alle punkter overvejes, hvor objektfunktionen $\textbf{c}^T\textbf{x}$ er lig med $k$. Dette illustreres ved den linje, der er beskrevet af ligningen $-x_l-x_2=k$. Dette betyder, at den optimale løsning som enten maksimerer eller minimerer værdien
-af objektfunktionen kan findes grafisk ved at indtegne niveaukurver $f(x1, x2)=k$ og forskyde disse niveaukurver i den retning, der optimerer værdien af objektfunktionen, indtil den optimale løsning opnås.  Bemærk, i det følgende eksempel, at denne linje er vinkelret på vektoren $\textbf{v}$ med koordinaterne $\textbf{v}=(-1,-1)$.
-Forskellige værdier for $k$ fører til forskellige linjer, hvor  alle linjer er parallelle med hinanden samt vinkelret med vektoren $\textbf{v}$. Hvis værdien af $k$ øges, svarer det til at bevæge linjen $z=x_l-x_2$ langs retningen af vektoren $\textbf{v}$. For at finde den optimale løsning for dette eksempel, er det interessante at minimere $k$, og dermed bevæge linjen så meget som muligt i retning af $-\textbf{v}$ uden at forlade løsningsmængden. Det mest optimale er derfor $k = -4$, hvormed vektor $\textbf{x}=(2,2)$ er den mest optimale løsning i løsningsmængden. 
+Løsningsmængden er det skraverede område på figur \ref{fig:min_loes}. For at finde den optimale løsning findes enhver given skalar $k$ og løsningsmængden med alle punkter overvejes, hvor objektfunktionen $\textbf{c}^T\textbf{x}$ er lig med $k$. Dette illustreres ved den linje, der er beskrevet af ligningen $-x_l-x_2=k$. Bemærk, at denne linje er vinkelret på vektoren $\textbf{v}$ med koordinaterne $\textbf{v}=(-1,-1)$.
+Forskellige værdier for $k$ fører til forskellige linjer, hvor  alle linjer er parallelle med hinanden samt vinkelret med vektoren. Hvis værdien af $k$ øges, svarer det til at bevæge linjen $z=x_l-x_2$ langs retningen af vektoren $\textbf{v}$. For at finde den optimale løsning er det interessante at minimere $k$, og dermed bevæge linjen så meget som muligt i retning af $-\textbf{v}$ uden at forlade løsningsmængden. Det mest optimale er derfor $k = -4$, hvormed vektor $\textbf{x}=(2,2)$ er den mest optimale løsning i løsningsmængden. 
