--- a/fig/tikz/geometri/konveks_eks.tex
+++ b/fig/tikz/geometri/konveks_eks.tex
@@ -4,50 +4,93 @@
 %
 \begin{center}
 % 
-\begin{tikzpicture}[scale=5]
+\begin{tikzpicture}[scale=6]
 % Koordinater
 % -------------------------------------------------------
-% 
-% Konvekse mængde
 \coordinate (c) at (0.7,1.2,1.2);
 \coordinate (d) at (1.2,1.2,1.2);
 \coordinate (g) at (1.2,0.7,1.2);
 \coordinate (h) at (0.7,0.7,1.2);
-% 
-% Ikke-konveks mængde 
-\coordinate (a) at (1.5,1.2,1.2);
 \coordinate (b) at (2,1.2,1.2);
-\coordinate (e) at (2,0.7,1.2);
 \coordinate (f) at (1.5,0.7,1.2);
-\coordinate (m) at (1.75,0.95,1.2);
 %
-% Favning
+% Tegning af vektorer
 % -------------------------------------------------------
-%
-% Ikke-konveks mængde farvning
-\filldraw[fill=myred,opacity=0.3, thick](a)--(b)--(e)--(m)--(f)--(a);
+  \draw[very thick,color=myblue](b)--(c);  
   \draw[thick,->](f)--(b);
   \draw[thick,->](f)--(c);
-  \draw[thick,->](f)--(1.35,1.2,1.2);
-  \draw[thick,->](b)--(c);
-  
+  \draw[thick,->, dashed](f)--(1.35,1.2,1.2);
 %
 % Punkter og linje 
 % -------------------------------------------------------
-% Blå figur
-\draw[thick,-] (0.8,0.8,1.2) -- (1.1,0.8,1.2);
+\filldraw[black] (0.95,1,1.2) circle (0pt) node[left] {$\mathbf{x}$};
+\filldraw[black] (1.7,1,1.2) circle (0pt) node[right] {$\mathbf{y}$};
+\filldraw[black] (1.1,1,1.2) circle (0pt) node[right] {$\frac{1}{2} \mathbf{x}+\frac{1}{2} \mathbf{y}$};
 %
-\filldraw[black] (0.8,0.8,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
-\filldraw[black] (1.1,0.8,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
-%
-% Rød figur 
-\draw[thick,-] (1.6,0.8,1.2) -- (1.9,0.8,1.2);
-%
-\filldraw[black] (1.6,0.8,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
-\filldraw[black] (1.9,0.8,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
+% Koordinatssystem
+% ------------------------------------------------------
+\draw[thick,->] (0,0,-0.5) -- (1.5,0,-0.5) node[anchor=south east]{$x$};
+\draw[thick] (0,0,-0.5) -- (-0.2,0,-0.5);
+\draw[thick,->] (0,0,-0.5) -- (0,0.8,-0.5) node[anchor=north west]{$y$};
+\draw[thick] (0,0,-0.5) -- (0,-0.2,-0.5);
 %
 %
 \end{tikzpicture}
-  \captionof{figure}{En konveks mængde markeret med blå og en ikke-konveks mængde markeret med rød.}
+  \captionof{figure}{Vektorerne $\mathbf{x}$ og $ \mathbf{y}$, samt den konvekse kombination af dem, hvor $\lambda_x = \lambda_y = \frac{1}{2}$, og den konvekse hylster af vektorerne, der er markeret med blå.}
   \label{fig:neej}
 \end{center}
+%
+%
+%
+%
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% Flot graf alla Julie     %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%
+\begin{center}
+\begin{tikzpicture}[scale=6]
+% Koordinater
+% -------------------------------------------------------
+\coordinate (c) at (0.7,1.2,1.2);
+\coordinate (d) at (1.2,1.2,1.2);
+\coordinate (g) at (1.2,0.7,1.2);
+\coordinate (h) at (0.7,0.7,1.2);
+\coordinate (b) at (2,1.2,1.2);
+\coordinate (f) at (1.5,0.7,1.2);
+%
+% Tegning af vektorer
+% ------------------------------------------------------- 
+  \draw[thick,->](f)--(b);
+  \draw[thick,->](f)--(c);
+  \draw[thick,->](f)--(1.7,1.2,1.6);
+%
+% Punkter og linje 
+% -------------------------------------------------------
+\filldraw[black] (0.95,1,1.2) circle (0pt) node[left] {$\mathbf{x}$};
+\filldraw[black] (1.7,1,1.2) circle (0pt) node[right] {$\mathbf{y}$};
+\filldraw[black] (1.4,1,1.2) circle (0pt) node[right] {$\mathbf{z}$};
+%
+% Planet - Hyperplanet
+% -------------------------------------------------------
+\filldraw [fill=myblue,opacity=0.3] 
+         (b) -- (c) -- (1.7,1.2,1.6) -- cycle;
+%
+%
+% Koordinatssystem
+% ------------------------------------------------------
+\draw[thick,->] (0,0,-0.5) -- (1.5,0,-0.5) node[anchor=south east]{$x$};
+\draw[thick] (0,0,-0.5) -- (-0.2,0,-0.5);
+\draw[thick,->] (0,0,-0.5) -- (0,0.8,-0.5) node[anchor=north west]{$y$};
+\draw[thick] (0,0,-0.5) -- (0,-0.2,-0.5);
+\draw[thick,->] (0,0,-0.5) -- (0,0,0.3) node[anchor=south east]{$z$};
+\draw[thick] (0,0,-0.5) -- (0,0,-0.8);
+%
+%
+\end{tikzpicture}
+  \captionof{figure}{Vektorerne $\mathbf{x}$, $ \mathbf{y}$ og $ \mathbf{z}$, og den konvekse hylster af vektorerne, der er markeret med blå.}
+  \label{fig:neeej}
+\end{center}
+%
+%
