--- a/fig/tikz/geometri/polyede3.tex
+++ b/fig/tikz/geometri/polyede3.tex
@@ -1,10 +1,9 @@
 \begin{minipage}[b]{0.45\textwidth}
 \begin{center}
-%start tikz picture, and use the tdplot_main_coords style to implement the display 
-%coordinate transformation provided by 3dplot
-\begin{tikzpicture}[scale=5]%[scale=5,tdplot_main_coords]
-%set up some coordinates 
-%-----------------------
+%
+\begin{tikzpicture}[scale=5]
+% Koordinater 
+% -------------------------------------------------------
 \coordinate (a) at (1.2,1.2,0.7);
 \coordinate (b) at (0.7,1.2,0.7);
 \coordinate (c) at (0.7,1.2,1.2);
@@ -13,8 +12,8 @@
 \coordinate (g) at (1.2,0.7,1.2);
 \coordinate (h) at (0.7,0.7,1.2);
 %
-%draw figure contents
-%--------------------
+% Figur
+% -------------------------------------------------------
 \filldraw[fill=myblue,opacity=0.3, thick](a)--(b)--(c)--(d)--(a)--(f)--(g)--(h)--(c)--(d)--(a);
   \draw[thick](d)--(g);
   \draw[thick](g)--(f);
@@ -28,16 +27,25 @@
   \draw[gray, thick, dashed](f)--(0.7,0.7,0.7)--(0.7,1.2,0.7);
   \draw[gray, thick, dashed](0.7,0.7,0.7)--(0.7,0.7,1.2);
 %
+%
+% Navngivning og prik til at gøre det pænt 
+% -------------------------------------------------------
 \draw[black] (0.91,0.96,1.2) circle (0pt) node[anchor=west] {$\mathcal{P}$};
-%draw the main coordinate system axes
+% 
+% 
+% Koordinatssystem 
+% -------------------------------------------------------
 \draw[thick,->] (0,0,0) -- (1,0,0) node[anchor=south east]{$x$};
 \draw[thick] (0,0,0) -- (-0.2,0,0);
 \draw[thick,->] (0,0,0) -- (0,1,0) node[anchor=north west]{$y$};
 \draw[thick,dashed] (0,0,0) -- (0,-0.2,0);
 \draw[thick,->] (0,0,0) -- (0,0,0.7) node[anchor=south east]{$z$};
 \draw[thick] (0,0,0) -- (0,0,-0.2);
+%
+%
 \end{tikzpicture}
   \captionof{figure}{En polyede $\mathcal{P}$ markeret med blå i $\R^3$.}
   \label{fig:nej3}
 \end{center}
+%
 \end{minipage}
