Update konveks_eks.tex, konveks_eks_r2.tex, and 2 more files...

--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -20,13 +20,19 @@ Lad $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k \in \R^n$, og $\lambda_1, 
 	\item Det \textbf{konvekse hylster} af vektorerne $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k$ er mængden af alle konvekse kombinationer af disse vektorer. 
 \end{enumerate}
 %
-%Det hedder vel ikke konvekse skrog, hvad kalder vi det? HORIA HJÆLP JENS
+% Det hedder vel ikke konvekse skrog, hvad kalder vi det?
+% HORIA HJÆLP JENS
 %
 \end{defn}
 %
-Eksempel 
+På figur \ref{fig:neej} ses to vektorer $\mathbf{x}$ og $\mathbf{y}$ i $\R^n$ og den konvekse kombination $\frac{1}{2} \mathbf{x}+\frac{1}{2} \mathbf{y}$, hvor $\lambda_x = \lambda_y = \frac{1}{2}$, og den konvekse hylster af vektorerne er en ret linje, der er markeret med blå. 
+\\\\
 %
-\input{fig/tikz/geometri/konveks_eks}
+\input{fig/tikz/geometri/konveks_eks_r2}
+%
+På figur \ref{fig:neeej} ses derimod tre vektorer $\mathbf{x}$, $\mathbf{y}$ og $\mathbf{z}$ i $\R^n$, og den konvekse hylster af vektorerne er en afgrænset flade, der på figuren er markeret med blå.
+%
+\input{fig/tikz/geometri/konveks_eks_r3}
 %
 Af definition \ref{defn:konvekskombihylster} følger sætning \ref{thm:konveks}.
 %
