--- a/incl/main/grafisk_losning/ekstrema_punkter.tex
+++ b/incl/main/grafisk_losning/ekstrema_punkter.tex
@@ -1,7 +1,7 @@
 \section{Ekstremer, hjørnepunkter og basale løsninger}
 %
-\textit{vis at løsningerne findes i hjørnene af en polytop.}
-Som det fremgår i ovenstående, vil en optimal løsning være i hjørnerne af en polyede.
+%\textit{Vis at løsningerne findes i hjørnene af en polytede.}
+Som det fremgår af afsnit \ref{heeeeejjulle}, vil en optimal løsning være tilbøjelige til at ligge i hjørnerne af en polyede.
 Der er derfor behov for måder at definere disse hjørner på.
 %
 \begin{defn}{}{ekstrema}
