--- a/incl/main/grafisk_losning/konveks_bevis(c).tex
+++ b/incl/main/grafisk_losning/konveks_bevis(c).tex
@@ -1,3 +1,4 @@
 Dette punkt bevises ved induktions bevis.
 Per definitionen af konvekse mængder, ligger en konveks kombination af to elementer i en konveks mængde i mængden.
-Som induktionsantagelse antager vi at en konveks kombination af $c$ elementer i en konveks mængde også er i mængden. Dernæst undersøges $c+1$ elementer $x_1,x_2,\ldots,x_c+1$ i en konveks mængde $\S$
+Som induktionsantagelse antager vi at en konveks kombination af $c$ elementer i en konveks mængde også er i mængden. Dernæst undersøges $c+1$ elementer $x_1,x_2,\ldots,x_c+1$ i en konveks mængde $\S$. Lad $\lambda_1,\ldots,\lambda_{k+1}$ være ikke negative skalarer som hvis sum er $1$. Det antages at $\lambda_{k+1}\neq1$. Så haves at
+$$\sum^{k+1}_{i=1}\lambda_i\textbf{x}_i=$$
