Update degenerering.tex, eksistens.tex, and 4 more files...

--- a/incl/main/grafisk_losning/grafisk_losning.tex
+++ b/incl/main/grafisk_losning/grafisk_losning.tex
@@ -1,15 +1,37 @@
 \chapter{Grafisk løsning}
+%
 % 2.1 Polyeder og konvekse mængder 
 % ---------------------------------------------------------
 	\input{incl/main/grafisk_losning/hyperplan_halvrum_polyeder}
 	\input{incl/main/grafisk_losning/konvekse_maengder}
 % 
+%
 % 2.2 Ekstrema, hjørnepunkter og basale mulige løsninger 
 % ---------------------------------------------------------
 	\input{incl/main/grafisk_losning/ekstrema_punkter}	
 	\input{incl/main/grafisk_losning/alg_hjorne}
-
 % 
+%
 % 2.3 Polyede på standardform
 % ---------------------------------------------------------
 	\input{incl/main/grafisk_losning/poly_std_form}
+% 
+%
+% 2.4 Degenerering
+% ---------------------------------------------------------
+	\input{incl/main/grafisk_losning/degenerering}
+% 
+%
+% 2.5 Eksistens af ekstremumspunkter
+% ---------------------------------------------------------
+	\input{incl/main/grafisk_losning/eksistens}
+% 
+%
+% 2.6 Optimering af ekstremumspunkter 
+% ---------------------------------------------------------
+	\input{incl/main/grafisk_losning/optimering}	
+% 
+%
+% 2.7 Repræsentation af begrænset polyede
+% ---------------------------------------------------------
+	\input{incl/main/grafisk_losning/reprasentation}
