--- a/incl/main/grafisk_losning/alg_hjorne.tex
+++ b/incl/main/grafisk_losning/alg_hjorne.tex
@@ -39,7 +39,7 @@ Med udgangspunkt i betingelsers tilsvarende vektorer kan givne betingelser siges
 Med dette og sætning \ref{thm:betingi}(a) kan hjørnepunkterne defineres som mulige løsninger, hvor $n$ lineært uafhængige betingelser er bindende.
 Bemærk, at alle betingelser skal være opfyldt, for at et givent punkt kan være en mulig løsning og, at et punkt i ikke behøver at opfylde alle betingelser for at kunne have $n$ bindende betingelser.
 %
-\begin{defn}{}{}
+\begin{defn}{}{basal}
 Lad $P$ være en polyede defineret med lineære lighed- og ulighedsbetingelser og lad $\textbf{x}$ være en vektorer i $\R^n$.
 %
 \begin{enumerate}[label=(\alph*)]
@@ -52,7 +52,7 @@ Lad $P$ være en polyede defineret med lineære lighed- og ulighedsbetingelser o
 %
 \item Vektoren $\textbf{x}$ er en \textbf{basal mulig løsning}, hvis $\textbf{x}$ er en \textit{basal løsning} og alle betingelser er opfyldt.
 \end{enumerate}
-\end{defn}
+\end{defn}\noindent
 %
 Bemærk, at hvis en polyede er defineret med $m$ lineære betingelser og $m<n$, så eksisterer der ikke et punkt med $n$ bindende betingelser.
 Dette medfører, at der hverken er \textit{bassale løsninger} eller \textit{basale mulige løsninger}.\\\\
@@ -73,5 +73,39 @@ Så er følgende udsagn ækvivalente:
 \end{thm}
 %
 \begin{proof}
-To be continued...
+Lad $P$ være en polyede defineret ve betingelser på formen $\textbf{a}_i^T\textbf{x} \geq b_i$ og $\textbf{a}_i^T\textbf{x} = b_i$.\\\\
+%
+Lad $\textbf{x} \in P$ være et ?punkt. Jævnfør definition \ref{} eksisterer der så et $\textbf{c} \in \R^n$ således, at $\textbf{c}^T\textbf{x} < \textbf{c}^T\textbf{y}$ for alle $\textbf{y}$, som opfylder $\textbf{y} \in P$ og $\textbf{y} \neq \textbf{x}$.
+Hvis $\textbf{y} \in P$, $\textbf{z} \in P$, $\textbf{y} \neq \textbf{x}$, $\textbf{z} \neq \textbf{x}$ og $0 \leq \lambda \leq 1$, så $\textbf{c}^T\textbf{x} < \textbf{c}^T\textbf{y}$ og $\textbf{c}^T\textbf{x} < \textbf{c}^T\textbf{z}$.
+Dette medfører, at $\textbf{c}^T\textbf{x} < \textbf{c}^T(\lambda \textbf{y} + (1-\lambda)\textbf{z})$, som betyder, at $\textbf{x}^T \neq \lambda \textbf{y} + (1 - \lambda)\textbf{z}$.
+Derfor kan $\textbf{x}$ ikke bliv udtrykt som en kombination af to andre elementer i $P$, hvilket betyder, at $\textbf{x}$ er et ?punkt ifølge definition \ref{}.\\\\
+%
+Antag, at $\textbf{x} \in P$ ikke er en \textit{basal mulig løsning} og lad $I = \{ i | \textbf{a}_i^T \textbf{x} = b_i\}$.
+Da $\textbf{x}$ ikke er en \textit{basal mulig løsning} må der ikke eksistere $n$ lineært uafhængige vektorer af typen $\textbf{a}_i$, $i \in I$.
+Derfor må vektorerne $\textbf{a}_i$, $i \in I$ ligge i et ægte underrum af $\R^n$ og der eksisterer derfor en ikke-nulvektor $\textbf{d} \in \R^n$ sådan, at $\textbf{a}_i^T\textbf{d} = 0$ for alle $i \in I$.
+Lad $\epsilon$ være et lille positivt tal og betragt vektorerne $\textbf{y} = \textbf{x} + \epsilon\textbf{d}$ og $\textbf{y} = \textbf{x} - \epsilon\textbf{d}$.
+Bemærk, at $\textbf{a}_i^T \textbf{y} = \textbf{a}_i^T \textbf{x} = b_i$, for $i \in I$.
+Endvidere haves, at $\textbf{a}_i^T \textbf{x} > b_i$ for $i \notin I$ og givet, at $\epsilon$ er lille nok haves $\textbf{a}_i^T \textbf{y} > b_i$ for $i \notin I$.
+Det er her tilstrækkeligt at vælge $\epsilon$ således, at $\epsilon |\textbf{a}_i^T\textbf{d}| < \textbf{a}_i^T\textbf{x} - b_i$, for alle $i \notin I$.
+Når $\epsilon$ er lille nok haves $\textbf{y} \in P$ og med samme argumentering haves $\textbf{z} \in P$.
+Dette betyder, at $\textbf{x}$ ikke er et ?punkt, da $\textbf{x} = \frac{\textbf{y} + \textbf{z}}{2}$.\\\\
+%
+Lad $\textbf{x}$ være en \textit{basal mulig løsning}, lad $I = \{i | \textbf{a}_i^T\textbf{x} = b_i \}$ og lad $\textbf{x}=\sum_{i \in I} \textbf{a}_i$.
+Så haves
+%
+\begin{align*}
+\textbf{c}^T\textbf{x} = \sum_{i\in I}\textbf{a}_i^T\textbf{x} = \sum_{i\in I}b_i.
+\end{align*}
+%
+Yderligere haves $\textbf{a}_i^T\textbf{x} \geq b_i$ for ethvert $\textbf{x} \in P$ og ethvert $i$ og 
+%
+\begin{align}\label{eq:ulig}
+\textbf{c}^T\textbf{x} = \sum_{i\in I}\textbf{a}_i^T\textbf{x} \geq \sum_{i\in I}b_i.
+\end{align}
+%
+Dette viser, at $\textbf{x}$ er en optimal løsning minimumsproblemet $\textbf{c}^T\textbf{x}$ over $P$.
+Yderligere holder uligheden i ligning \ref{eq:ulig}, hvis og kun hvis $\textbf{a}_i^T\textbf{x} = b_i$ for alle $i \in I$.
+Da $\textbf{x}$ er en \textit{basal mulig løsning} er der $n$ lineært uafhængige betingelser, som er bindende i $x$ og $x$ er en entydig løsning til ligningssystemet $\textbf{a}_i^T\textbf{x} = b_i$, $i \in I$.
+Det følger derfor, at $\textbf{x}$ er et entydigt minimum til $\textbf{c}^T\textbf{x}$ over $P$ og dermed et ?punkt til $P$.
+%
 \end{proof}
