--- a/fig/tikz/geometri/konveks.tex
+++ b/fig/tikz/geometri/konveks.tex
@@ -56,5 +56,5 @@
 %
 \end{tikzpicture}
   \captionof{figure}{En konveks mængde markeret med blå og en ikke-konveks mængde markeret med rød.}
-  \label{fig:neej}
+  \label{fig:neej1}
 \end{center}
