--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -8,7 +8,7 @@ En mængde $S \subset \R^n$ er \textbf{konveks}, hvis $\lambda \textbf{x} + (1- 
 \noindent
 %
 En mængde er med andre ord konveks, hvis ethvert element på en ret linje mellem to vilkårlige punkter $x$ og $y$ i mængden også tilhører mængden. 
-På figur \ref{fig:neej} ses eksempler på en konveks mængde, markeret med blå og ikke-konveks mængde markeret med rød. 
+På figur \ref{fig:neej1} ses eksempler på en konveks mængde, markeret med blå og ikke-konveks mængde markeret med rød. 
 %
 \input{fig/tikz/geometri/konveks}
 %
@@ -25,7 +25,7 @@ Lad $\textbf{x}^1, \textbf{x}^2, \ldots, \textbf{x}^k \in \R^n$, og $\lambda_1, 
 %
 \end{defn}
 %
-På figur \ref{fig:neej} ses to vektorer $\mathbf{x}$ og $\mathbf{y}$ i $\R^n$ og den konvekse kombination $\frac{1}{2} \mathbf{x}+\frac{1}{2} \mathbf{y}$, hvor $\lambda_x = \lambda_y = \frac{1}{2}$, og den konvekse hylster af vektorerne er en ret linje, der er markeret med blå. 
+På figur \ref{fig:neej2} ses to vektorer $\mathbf{x}$ og $\mathbf{y}$ i $\R^n$ og den konvekse kombination $\frac{1}{2} \mathbf{x}+\frac{1}{2} \mathbf{y}$, hvor $\lambda_x = \lambda_y = \frac{1}{2}$, og den konvekse hylster af vektorerne er en ret linje, der er markeret med blå. 
 \\\\
 %
 \input{fig/tikz/geometri/konveks_eks_r2}
