--- a/fig/tikz/ekstrema.tex
+++ b/fig/tikz/ekstrema.tex
@@ -37,7 +37,7 @@
 	\draw[-, dashed,black,ultra thick] (-4,2) -- (-4,-2);
 %
   \end{tikzpicture}
-  \caption{En afgrænset polyede $\mathcal{P}$, hvor $\textbf{x}$ er et ekstramumspunkt, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$. Vektor $\textbf{w}$ er i modsætning ikke et ekstremumspunkt da der findes $\textbf{v}$ og $\textbf{u}$ sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda)u$.}
+  \caption{En afgrænset polyede $\mathcal{P}$, hvor $\textbf{x}$ er et ekstremumspunkt, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)z$. Vektor $\textbf{w}$ er i modsætning ikke et ekstremumspunkt da der findes $\textbf{v}$ og $\textbf{u}$ sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda)u$.}
   \label{fig:ekstrema}
 \end{figure}
 %
